--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,52 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/studomiaDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=08158422923temi
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.max.connection.pool.size=2
+#spring.datasource.url=jdbc:mysql://localhost:3306/studomiaDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=08158422923temi
+#spring.jpa.generate-ddl=true
+#spring.jpa.show-sql=true
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.max.connection.pool.size=2
+
+#################################h2 in memory dd
+###########for the h2 in-memory if the app restarts records are lost so we can use the other
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/testdb
+#spring.datasource.url=jdbc:h2:file:C:/data/sampledata for windows users
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#accessing the h2 console
+spring.h2.console.enabled=true
+
+
+spring.jpa.hibernate.ddl-auto=update
+#create , create-drop , validate ,update
+######################################################################
+
+
+############Spring automatic action on database
+#Spring Boot will automatically pick up the data.sql and run it against our configured H2 database
+
+spring.application.name=studomia service
+logging.level.=ERROR
+#logging.file=${java.io.tmpdir}/${spring.application.name}.log
+debug=true
+#spring.show-sql=true
+
+
+################################social login credentials
+######################GOOGLE
+spring.security.oauth2.client.registration.google.clientId=115475990538-6d7lrun2ul9mfp8vj2aok5lausk3bigq.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.clientSecret=2c0d9IVJtKoxqwPLQUZV1T_6
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
+
+####################facebook
+spring.security.oauth2.client.registration.facebook.clientId=115475990538-6d7lrun2ul9mfp8vj2aok5lausk3bigq.apps.googleusercontent.com
+spring.security.oauth2.client.registration.facebook.clientSecret=2c0d9IVJtKoxqwPLQUZV1T_6
+spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhost:8080/oauth2/callback/google
+
+
+######################twitter
+
+########################github
