--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -16,4 +16,4 @@ jobs:
     # You may pin to the exact commit or the version.
     - name: Deploy to production
       run: |
-        git push https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/studomia.git master
+        git push https://heroku:$HEROKU_API_KEY@git.heroku.com/studomia.git master
