--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Deploy to production
       run: |
-       git fetch --all --unshallow https://heroku:ce11c13e-be0e-4ed8-86f4-51b178344e12@git.heroku.com/temi-lab-app.git master
+       git fetch --all --unshallow
        git push --force https://heroku:ce11c13e-be0e-4ed8-86f4-51b178344e12@git.heroku.com/temi-lab-app.git master
