--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -13,7 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Deploy to production
-      run: |
-       git fetch --all --unshallow
-       git push --force https://heroku:ce11c13e-be0e-4ed8-86f4-51b178344e12@git.heroku.com/temi-lab-app.git master
+    - name: Deploy to Heroku
+    # You may pin to the exact commit or the version.
+    # uses: AkhileshNS/heroku-deploy@79ef2ae4ff9b897010907016b268fd0f88561820
+      uses: AkhileshNS/heroku-deploy@v3.12.12
+      with:
+      # This will be used for authentication. You can find it in your heroku homepage account settings
+           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+      # Email that you use with heroku
+           heroku_email: ${{secrets.HEROKU_EMAIL}}
+      # The appname to use for deploying/updating
+           heroku_app_name: ${{secrets.HEROKU_APP}}
