--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -13,14 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Add remote origin
+      run: |
+        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP}}.git
     - name: Deploy to Heroku
-    # You may pin to the exact commit or the version.
-    # uses: AkhileshNS/heroku-deploy@79ef2ae4ff9b897010907016b268fd0f88561820
-      uses: AkhileshNS/heroku-deploy@v3.12.12
-      with:
-      # This will be used for authentication. You can find it in your heroku homepage account settings
-           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      # Email that you use with heroku
-           heroku_email: ${{secrets.HEROKU_EMAIL}}
-      # The appname to use for deploying/updating
-           heroku_app_name: ${{secrets.HEROKU_APP}}
+      run: |
+        git push heroku HEAD:master -f
