--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Add remote origin
+      run: |
+        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP}}.git
     - name: Deploy to Heroku
-      uses: AkhileshNS/heroku-deploy@v3.12.12
-      with:
-           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-           heroku_email:  ${{secrets.HEROKU_EMAIL}}
-           heroku_app_name: ${{secrets.HEROKU_APP}}
+      run: |
+        git push heroku HEAD:master -f
