--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -18,4 +18,4 @@ jobs:
         git remote add heroku https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/${{secrets.HEROKU_APP}}.git
     - name: Deploy to Heroku
       run: |
-        git push heroku HEAD:master -f
+        git push --force https://heroku:${{secrets.HEROKU_API_KEY}}@git.heroku.com/${{secrets.HEROKU_APP}} master
