redirect endpoint issue fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 ####################facebook
 spring.security.oauth2.client.registration.facebook.clientId=115475990538-6d7lrun2ul9mfp8vj2aok5lausk3bigq.apps.googleusercontent.com
 spring.security.oauth2.client.registration.facebook.clientSecret=2c0d9IVJtKoxqwPLQUZV1T_6
-spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhost:8080/oauth2/callback/google
+spring.security.oauth2.client.registration.facebook.redirect-uri=https://studomia.herokuapp.com/oauth2/callback/google
 
 
 ######################twitter
