--- a/.github/workflows/heroku-deployment.yml
+++ b/.github/workflows/heroku-deployment.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Deploy to Heroku prod
+    - name: Deploy to Heroku production
       uses: AkhileshNS/heroku-deploy@v3.12.12
       with:
            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
