redirect endpoint issue fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,16 +35,19 @@ debug=true
 #spring.show-sql=true
 
 
+app.name=studomia
+app.description=${app.name} is a Spring Boot application for e-learning
+app.baseUrl=https://studomia.herokuapp.com
 ################################social login credentials
 ######################GOOGLE
 spring.security.oauth2.client.registration.google.clientId=115475990538-6d7lrun2ul9mfp8vj2aok5lausk3bigq.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=2c0d9IVJtKoxqwPLQUZV1T_6
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
+spring.security.oauth2.client.registration.google.redirect-uri=${app.baseUrl}/oauth2/callback/google
 
 ####################facebook
 spring.security.oauth2.client.registration.facebook.clientId=115475990538-6d7lrun2ul9mfp8vj2aok5lausk3bigq.apps.googleusercontent.com
 spring.security.oauth2.client.registration.facebook.clientSecret=2c0d9IVJtKoxqwPLQUZV1T_6
-spring.security.oauth2.client.registration.facebook.redirect-uri=https://studomia.herokuapp.com/oauth2/callback/google
+spring.security.oauth2.client.registration.facebook.redirect-uri=${app.baseUrl}/oauth2/callback/google
 
 
 ######################twitter
