externalization of app configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,9 @@ debug=true
 
 app.name=studomia
 app.description=${app.name} is a Spring Boot application for e-learning
-app.baseUrl=https://studomia.herokuapp.com
+#app.baseUrl=https://studomia.herokuapp.com
+app.baseUrl=http://localhost:8080
+app.on.auth.success.redirect.path=/profile
 ################################social login credentials
 ######################GOOGLE
 spring.security.oauth2.client.registration.google.clientId=115475990538-6d7lrun2ul9mfp8vj2aok5lausk3bigq.apps.googleusercontent.com
