--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,8 @@ debug=true
 
 app.name=studomia
 app.description=${app.name} is a Spring Boot application for e-learning
-#app.baseUrl=https://studomia.herokuapp.com
-app.baseUrl=http://localhost:8080
+app.baseUrl=https://studomia.herokuapp.com
+#app.baseUrl=http://localhost:8080
 app.on.auth.success.redirect.path=/profile
 ################################social login credentials
 ######################GOOGLE
