added allowed cross origins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,8 @@ spring.security.oauth2.client.registration.facebook.redirect-uri=${app.baseUrl}/
 ######################twitter
 
 ########################github
+
+
+
+##############################ALLOWED ORIGINS
+cors.allowed.origins=http://localhost:3003,https://toshihiro.herokuapp.com
