--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,14 @@
 	<version>0.0.1</version>
 	<name>studomia</name>
 	<description>e-learning platform</description>
+
 	<properties>
 		<java.version>1.8</java.version>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
+
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -121,6 +126,12 @@
 		</dependency>
 
 		<!-- ends -->
+		<!--Log4j-->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -133,6 +144,13 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.5.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
