modified app properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,26 +23,25 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #create , create-drop , validate ,update
 ######################################################################
 
 
 ############Spring automatic action on database
 #Spring Boot will automatically pick up the data.sql and run it against our configured H2 database
-
 spring.application.name=studomia service
 #logging.level.=ERROR
 #logging.file=${java.io.tmpdir}/${spring.application.name}.log
-debug=true
+#debug=true
 #spring.show-sql=true
 logging.level.org.springframework.web.client.RestTemplate: DEBUG
 
 
 app.name=studomia
 app.description=${app.name} is a Spring Boot application for e-learning
-#app.baseUrl=https://studomia.herokuapp.com
-app.baseUrl=http://localhost:8080
+app.baseUrl=https://studomia.herokuapp.com
+#app.baseUrl=http://localhost:8080
 app.on.auth.success.redirect.path=/profile
 
 ################################social login credentials
